--- a/package.json
+++ b/package.json
@@ -82,9 +82,9 @@
   },
   "dependencies": {
     "ember-assign-helper": "^0.3.0 || ^0.4.0",
-    "ember-cli-babel": "^7.18.0",
+    "ember-cli-babel": "^7.26.11",
     "ember-cli-element-closest-polyfill": "^0.0.2",
-    "ember-cli-htmlbars": "^4.2.3 || ^5.0.0 || ^6.0.0",
+    "ember-cli-htmlbars": "^5.0.0 || ^6.0.0",
     "ember-concurrency": "^0.8.27 || ^0.9.0 || ^0.10.0 || ^1.0.0 || ^2.0.0-rc.1",
     "ember-decorators": "^6.1.1",
     "ember-element-helper": "^0.5.0 || ^0.6.0",
